# Karo

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  app.py  chainlit.md  docker-compose.yml  index.css  ingest.py  instructions.md  main.py  pyproject.toml  streamlit_app.py
.chainlit/: config.toml
.cursor/rules/: gitnexus.mdc
.streamlit/: config.toml
backend/: agent.py  config.py  graph.py  helpers.py  prompts.py  tools.py
docker/postgres/: init.sql
eval/: __init__.py  cases.yaml  harness.py  run_eval.py
public/: theme.json
tests/: conftest.py  test_agent_eval.py
